@@ -511,6 +511,7 @@ Frank Stajano
 Richard Stoakley
 Casper Stoel
 Peter Stoehr
+Michael Stone
 Ken Stox
 Daniel Stutzbach
 Paul Swartz
